Fix a bug where the legend of charts wouldn't be legible in the wysiwyg

--- a/app/assets/stylesheets/components/shared/c-vizz-wysiwyg.scss
+++ b/app/assets/stylesheets/components/shared/c-vizz-wysiwyg.scss
@@ -180,6 +180,17 @@
         font-size: $font-size-small;
       }
     }
+
+    // Bootstrap default styles mess up with the
+    // chart's legend
+    // This happens in the wysiwyg in the management section
+    .legend .item .label {
+      color: $color-4;
+      font-size: inherit;
+      font-weight: inherit;
+      line-height: inherit;
+      padding: inherit;
+    }
   }
 
   .c-we-chart,
